<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Calculistor</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="number9">9</string>
    <string name="number8">8</string>
    <string name="number7">7</string>
    <string name="number6">6</string>
    <string name="number5">5</string>
    <string name="number4">4</string>
    <string name="number3">3</string>
    <string name="number2">2</string>
    <string name="number1">1</string>
    <string name="number0">0</string>
    <string name="multiply">*</string>
    <string name="divide">/</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="equals">=</string>
    <string name="decimal">.</string>
    <string name="clear">clear</string>
    <string name="clearAll">clear all</string>
    <string name="answer">ans</string>
    <string name="storeAnswer">store ans</string>
    <string name="retrieveAnswer">retrieve ans</string>

</resources>